# 2025-Operating-Systems

./: .gitignore
lab1/: .env  CMakeLists.txt  build.sh  config.txt  create_test_folders.sh
lab1/docker-build/: Dockerfile  compose.yaml
lab1/src/: main.cpp
lab1/src/config/: config.cpp  config.hpp
lab1/src/daemon/: daemon.cpp  daemon.hpp
lab1/src/logger/: logger.cpp  logger.hpp
lab1/src/util/: util.cpp  util.hpp
lab2/: .gitignore  CMakeLists.txt  build.sh
lab2/docker-build/: Dockerfile
lab2/docker_test/: build.ps1  test_fifo.ps1  test_mq.ps1  test_sock.ps1
lab2/src/: client.cpp  common.cpp  common.h  conn_fifo.cpp  conn_iface.h  conn_mq.cpp  conn_sock.cpp  host.cpp
lab2/src/common/: cli.cpp  cli.h  common.cpp  common.h
lab2/src/connections/base/: conn_iface.h
lab2/src/connections/fifo/: conn_fifo.cpp  conn_fifo.h  transport_fifo.cpp
lab2/src/connections/mq/: conn_mq.cpp  conn_mq.h  transport_mq.cpp
lab2/src/connections/sock/: conn_sock.cpp  conn_sock.h  transport_sock.cpp
lab2/src/core/: game_engine.cpp  game_engine.h  game_types.h  protocol.h
lab2/src/transport/: handshake_signal.h  hanshake_signal.cpp  sync_semaphore.cpp  sync_semaphore.h  transport_api.h  transport_factory.h
